[gd_scene load_steps=36 format=3 uid="uid://bpptglsktg2cy"]

[ext_resource type="Script" path="res://Scripts/hammerball.gd" id="1_8tu0w"]
[ext_resource type="PackedScene" uid="uid://jvr74kpe6ekr" path="res://Scenes/ball.tscn" id="2_r2lg3"]
[ext_resource type="Script" path="res://Scripts/player_left.gd" id="3_dipui"]
[ext_resource type="Texture2D" uid="uid://cbmt75tcfd8ds" path="res://Art/puppiz.png" id="5_7xbuw"]
[ext_resource type="Script" path="res://Scripts/player_right.gd" id="5_73osy"]
[ext_resource type="Texture2D" uid="uid://ui8pw5h5clgg" path="res://icon.svg" id="6_pv57n"]
[ext_resource type="FontFile" uid="uid://dniqbckc54f7t" path="res://Art/fonts/digital-7.ttf" id="6_ugham"]
[ext_resource type="Texture2D" uid="uid://bckr28tcijg81" path="res://Art/foot.png" id="7_dfu3f"]
[ext_resource type="Script" path="res://Scenes/GameTimer.gd" id="9_47fpj"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ligc5"]
friction = 0.2
bounce = 0.18
absorbent = true

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8pb5e"]
radius = 24.0
height = 72.0

[sub_resource type="AtlasTexture" id="AtlasTexture_15s0g"]
atlas = ExtResource("5_7xbuw")
region = Rect2(0, 0, 320, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdtft"]
atlas = ExtResource("5_7xbuw")
region = Rect2(320, 0, 320, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_askua"]
atlas = ExtResource("5_7xbuw")
region = Rect2(640, 0, 320, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0ex0"]
atlas = ExtResource("5_7xbuw")
region = Rect2(960, 0, 320, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6kj2"]
atlas = ExtResource("5_7xbuw")
region = Rect2(1280, 0, 320, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6j1q"]
atlas = ExtResource("5_7xbuw")
region = Rect2(1600, 0, 320, 330)

[sub_resource type="SpriteFrames" id="SpriteFrames_lh1tn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_15s0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdtft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_askua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0ex0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6kj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6j1q")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x0hrn"]
size = Vector2(6, 58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tl6co"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0n8tx"]
radius = 24.0
height = 76.0

[sub_resource type="AtlasTexture" id="AtlasTexture_hlut7"]
atlas = ExtResource("5_7xbuw")
region = Rect2(0, 0, 320, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_p22mk"]
atlas = ExtResource("5_7xbuw")
region = Rect2(320, 0, 320, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_no3rt"]
atlas = ExtResource("5_7xbuw")
region = Rect2(640, 0, 320, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_5a80c"]
atlas = ExtResource("5_7xbuw")
region = Rect2(960, 0, 320, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3ckx"]
atlas = ExtResource("5_7xbuw")
region = Rect2(1280, 0, 320, 330)

[sub_resource type="AtlasTexture" id="AtlasTexture_27ryc"]
atlas = ExtResource("5_7xbuw")
region = Rect2(1600, 0, 320, 330)

[sub_resource type="SpriteFrames" id="SpriteFrames_gci60"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlut7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p22mk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no3rt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5a80c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3ckx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27ryc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_5el6f"]
friction = 0.5
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ghsd5"]
size = Vector2(18, 786)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_7jjfh"]
friction = 0.5
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rbq0k"]
size = Vector2(1362, 20)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_4ar1h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qeepl"]
size = Vector2(51, 264)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hiaq1"]
size = Vector2(147.559, 20)

[node name="Hammerball" type="Node2D"]
script = ExtResource("1_8tu0w")

[node name="Ball" parent="." groups=["Balls"] instance=ExtResource("2_r2lg3")]
position = Vector2(640, 320)

[node name="PlayerLeft" type="RigidBody2D" parent="."]
position = Vector2(184, 680)
collision_layer = 4
collision_mask = 5
mass = 1.92
physics_material_override = SubResource("PhysicsMaterial_ligc5")
lock_rotation = true
continuous_cd = 2
script = ExtResource("3_dipui")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerLeft"]
position = Vector2(0, -20)
shape = SubResource("CapsuleShape2D_8pb5e")

[node name="GroundRay" type="RayCast2D" parent="PlayerLeft"]
target_position = Vector2(0, 35)
collision_mask = 5

[node name="LeftRay" type="RayCast2D" parent="PlayerLeft"]
target_position = Vector2(-40, 0)

[node name="RightRay" type="RayCast2D" parent="PlayerLeft"]
target_position = Vector2(40, 0)

[node name="Shoe2" type="Sprite2D" parent="PlayerLeft"]
z_index = 1
position = Vector2(16, 24)
scale = Vector2(0.237382, 0.258993)
region_enabled = true
region_rect = Rect2(262, 442, 117, 80)

[node name="Shoe" type="Sprite2D" parent="PlayerLeft"]
z_index = 1
position = Vector2(-11, 24)
scale = Vector2(0.237382, 0.258993)
region_enabled = true
region_rect = Rect2(262, 442, 117, 80)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PlayerLeft"]
z_index = 1
position = Vector2(0, -35)
scale = Vector2(0.31, 0.31)
sprite_frames = SubResource("SpriteFrames_lh1tn")
frame = 2
frame_progress = 0.826551

[node name="Bat" type="CharacterBody2D" parent="PlayerLeft"]
position = Vector2(7, -20)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerLeft/Bat"]
position = Vector2(0, 19)
shape = SubResource("RectangleShape2D_x0hrn")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerLeft/Bat"]
position = Vector2(0.0967207, 38.2752)
shape = SubResource("RectangleShape2D_tl6co")

[node name="PlayerRight" type="RigidBody2D" parent="."]
position = Vector2(1184, 672)
collision_layer = 4
collision_mask = 5
mass = 1.92
physics_material_override = SubResource("PhysicsMaterial_ligc5")
lock_rotation = true
continuous_cd = 2
script = ExtResource("5_73osy")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerRight"]
position = Vector2(0, -20)
shape = SubResource("CapsuleShape2D_0n8tx")

[node name="GroundRay" type="RayCast2D" parent="PlayerRight"]
target_position = Vector2(0, 35)
collision_mask = 5

[node name="LeftRay" type="RayCast2D" parent="PlayerRight"]
target_position = Vector2(-40, 0)

[node name="RightRay" type="RayCast2D" parent="PlayerRight"]
target_position = Vector2(40, 0)

[node name="Shoe2" type="Sprite2D" parent="PlayerRight"]
z_index = 1
position = Vector2(-6, 30)
scale = Vector2(0.181624, 0.225)
flip_h = true
region_enabled = true
region_rect = Rect2(34, 443, 117, 80)

[node name="Shoe" type="Sprite2D" parent="PlayerRight"]
z_index = 2
position = Vector2(15, 30)
scale = Vector2(0.181624, 0.225)
flip_h = true
region_enabled = true
region_rect = Rect2(34, 443, 117, 80)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PlayerRight"]
z_index = 1
position = Vector2(0, -35)
scale = Vector2(0.31, 0.31)
sprite_frames = SubResource("SpriteFrames_gci60")
flip_h = true

[node name="Bat" type="CharacterBody2D" parent="PlayerRight"]
position = Vector2(-27, -20)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerRight/Bat"]
position = Vector2(0, 19)
shape = SubResource("RectangleShape2D_x0hrn")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerRight/Bat"]
position = Vector2(0.0967207, 38.2752)
shape = SubResource("RectangleShape2D_tl6co")

[node name="Bounds" type="Node2D" parent="."]

[node name="WallLeft" type="StaticBody2D" parent="Bounds"]
physics_material_override = SubResource("PhysicsMaterial_5el6f")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/WallLeft"]
position = Vector2(-1, 383)
shape = SubResource("RectangleShape2D_ghsd5")

[node name="WallRight" type="StaticBody2D" parent="Bounds"]
position = Vector2(1352, 64)
physics_material_override = SubResource("PhysicsMaterial_7jjfh")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/WallRight"]
position = Vector2(0, 319)
shape = SubResource("RectangleShape2D_ghsd5")

[node name="Ceiling" type="StaticBody2D" parent="Bounds"]
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Ceiling"]
position = Vector2(671, 0)
shape = SubResource("RectangleShape2D_rbq0k")

[node name="Floor" type="StaticBody2D" parent="Bounds"]
position = Vector2(600, 744)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Floor"]
shape = SubResource("WorldBoundaryShape2D_4ar1h")

[node name="Scoreboard" type="Label" parent="."]
modulate = Color(0.905721, 0.269104, 0.327508, 1)
offset_left = -24.0
offset_top = 91.0
offset_right = 1344.0
offset_bottom = 227.0
theme_override_fonts/font = ExtResource("6_ugham")
theme_override_font_sizes/font_size = 100
text = "0 - 0"
horizontal_alignment = 1

[node name="GoalLeft" type="Node2D" parent="."]

[node name="GoalArea" type="Area2D" parent="GoalLeft"]
position = Vector2(64, 551)
rotation = 0.00751454
collision_mask = 3
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalLeft/GoalArea"]
position = Vector2(-7.5, 42)
shape = SubResource("RectangleShape2D_qeepl")

[node name="Bar" type="StaticBody2D" parent="GoalLeft"]
position = Vector2(48, 544)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalLeft/Bar"]
position = Vector2(22.1531, -93.6729)
rotation = 2.72708
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_hiaq1")

[node name="Sprite2D" type="Sprite2D" parent="GoalLeft/Bar"]
modulate = Color(0, 0, 0, 1)
position = Vector2(-2.42277, -83.1657)
rotation = 1.52367
scale = Vector2(0.173423, 0.579618)
texture = ExtResource("6_pv57n")

[node name="GoalRight" type="Node2D" parent="."]
position = Vector2(1352, -80)
scale = Vector2(-1, 1)
metadata/_edit_group_ = true

[node name="GoalArea" type="Area2D" parent="GoalRight"]
position = Vector2(54, 639)
collision_mask = 3
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalRight/GoalArea"]
position = Vector2(-7.5, 43)
shape = SubResource("RectangleShape2D_qeepl")

[node name="Bar" type="StaticBody2D" parent="GoalRight"]
position = Vector2(48, 544)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalRight/Bar"]
position = Vector2(5.20947, -1.11447)
rotation = 2.59442
shape = SubResource("RectangleShape2D_hiaq1")

[node name="Sprite2D" type="Sprite2D" parent="GoalRight/Bar"]
modulate = Color(0, 0, 0, 1)
position = Vector2(-2.48671, -0.972131)
rotation = 1.52367
scale = Vector2(0.173423, 0.579618)
texture = ExtResource("6_pv57n")

[node name="Foot" type="Sprite2D" parent="."]
z_index = -6
position = Vector2(684, 382)
scale = Vector2(0.717593, 0.717593)
texture = ExtResource("7_dfu3f")

[node name="Labeltimer" type="Label" parent="."]
modulate = Color(1, 0.345639, 0.288257, 1)
offset_left = 646.0
offset_top = 210.0
offset_right = 686.0
offset_bottom = 233.0
theme_override_fonts/font = ExtResource("6_ugham")
theme_override_font_sizes/font_size = 27
text = "
"

[node name="Timer" type="Timer" parent="Labeltimer"]
script = ExtResource("9_47fpj")

[connection signal="body_entered" from="GoalLeft/GoalArea" to="." method="_on_goal_left_body_entered"]
[connection signal="body_entered" from="GoalRight/GoalArea" to="." method="_on_goal_right_body_entered"]
